<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C0C0C0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/rounded_border_gray"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/profileUsernameInterlinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:hint="@string/username"
                    android:padding="3dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:paddingTop="10dp"
                    android:text="@string/email"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileEmailInterlinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/profileLicenseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:text="License:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileLicenseInterlinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/profileStatusText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:text="Status:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileStatusInterlinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <TextView
                    android:id="@+id/profileLicenceLeftText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:text="Left:"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileLicenceLeftInterlinearText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:background="@drawable/rounded_border_gray"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C0C0C0"
                    android:padding="3dp"
                    android:text="Change Password"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Password"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/changePassText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_border_gray"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Repeat Password"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/changePassConfirmText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_border_gray"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/changePassBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_button_gray"
                    android:padding="5dp"
                    android:text="Change password"
                    android:textColor="@color/White" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/background_promo" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/promo_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_slab_regular"
                        android:text="@string/use_promo_code"
                        android:textColor="#FFFFFF"
                        android:textSize="28dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/promo_text"
                        android:layout_centerHorizontal="true"
                        android:background="@color/White"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/promo_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:background="@drawable/rounded_border_gray"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <Button
                            android:id="@+id/promo_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="right"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_button_gray"
                            android:includeFontPadding="false"
                            android:padding="5dp"
                            android:text="@string/enter_now"
                            android:textColor="@color/White"
                            android:textSize="16dp" />
                    </LinearLayout>
                </RelativeLayout>


            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>